# update-django-environ-sample

./: .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
update_django_environ_sample/: __init__.py
