[tool.poetry]
name = "update-django-environ-sample"
version = "0.1.0"
description = "Automatically update env.sample"
authors = ["Enrique Soria"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
update-django-environ-sample = "update_django_environ_sample:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
